--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Namer for the VichUploaderBundle which slugifies the filename of the uploaded file",
     "type": "library",
     "require": {
-        "php": "^5.5",
+        "php": "^5.5|^7.0",
         "cocur/slugify": "^2.5",
         "vich/uploader-bundle": "^1.4"
     },
